# radar-speed-sign

./: .gitmodules  README.md
affinity/: wiring_diagram.afdesign
bigass_7_segment/: #auto_saved_files#  _autosave-bigass_7_segment.kicad_pcb  bigass_7_segment.kicad_pcb  bigass_7_segment.kicad_pcb-bak  bigass_7_segment.kicad_prl  bigass_7_segment.kicad_pro  bigass_7_segment.kicad_sch  bigass_7_segment.net  bigass_7_segment.pro  bigass_7_segment.step  bigass_7_segment.xml  fp-info-cache  fp-lib-table  lib_sch.bck
bigass_7_segment/bom/: bigass_7_segment.xlsx
bigass_7_segment/lib_fp/: LED_PLCC6_5050.kicad_mod  Pad_01x02_Edge_Pair.kicad_mod  bird_with_pants_small.kicad_mod  bird_with_pants_small_flipped.kicad_mod
bigass_7_segment/plots/: bigass_7_segment-B_Cu.gbr  bigass_7_segment-B_Mask.gbr  bigass_7_segment-B_Paste.gbr  bigass_7_segment-B_SilkS.gbr  bigass_7_segment-Edge_Cuts.gbr  bigass_7_segment-F_Cu.gbr  bigass_7_segment-F_Mask.gbr  bigass_7_segment-F_Paste.gbr  bigass_7_segment-F_SilkS.gbr  bigass_7_segment-NPTH.drl  bigass_7_segment-PTH.drl  bigass_7_segment-bottom.pos  bigass_7_segment-job.gbrjob  bigass_7_segment-top.pos  bigass_7_segment-top_jlcpcb.xlsx
code/: radar-speed-sign.code-workspace
code/nano_arduino_radar_speed_sign/: platformio.ini
code/pico_cpp_radar_speed_sign/: CMakeLists.txt  README.md  docker-compose.yml
code/pico_cpp_radar_speed_sign/fft/: CMakeLists.txt
code/pico_cpp_radar_speed_sign/inc/: fft_utils.hh  hb100.hh  seven_seg.hh
code/pico_cpp_radar_speed_sign/scripts/: .env  .gitignore  generate_hanning_table.py  gpt.py  install_kiss_fft_dependencies.bash  plot_fft.py  pyproject.toml  radar_util.py  test.py
code/pico_cpp_radar_speed_sign/src/: CMakeLists.txt  fft_utils.cpp  hb100.cpp  main.cpp
code/pico_radar_speed_sign/: demo_display.py  main.py  radar_sensor.py  test.py
code/pico_upython_radar_speed_sign/: .micropico  bigass_7_segment.py  demo_display.py  main.py  radar_sensor.py
code/radar_speed_sign/: platformio.ini
excel/: design_calculations.xlsx  ~$design_calculations.xlsx
graphics/: radar_speed_sign.afdesign
kicad/: .gitignore
kicad/bigass_7_segment/: _autosave-bigass_7_segment.sch  bigass_7_segment-cache.lib  bigass_7_segment.kicad_pcb  bigass_7_segment.kicad_prl  bigass_7_segment.kicad_pro  bigass_7_segment.kicad_sch  bigass_7_segment.sch  bigass_7_segment.sch-bak  bigass_7_segment.xml  fp-info-cache  fp-lib-table  lib_sch.lib  sym-lib-table
kicad/hb100_amplifier/: fp-info-cache  hb100_amplifier.kicad_pcb  hb100_amplifier.kicad_prl  hb100_amplifier.kicad_pro  hb100_amplifier.kicad_sch  hb100_amplifier.step  hb100_amplifier.xml  ~hb100_amplifier.kicad_sch.lck
kicad/hb100_horn_horizontal_wall/: hb100_horn_horizontal_wall.kicad_pcb  hb100_horn_horizontal_wall.kicad_prl  hb100_horn_horizontal_wall.kicad_pro
kicad/hb100_horn_proto/: hb100_horn_proto.kicad_pcb  hb100_horn_proto.kicad_prl  hb100_horn_proto.kicad_pro
kicad/hb100_horn_vertical_wall/: hb100_horn_vertical_wall.kicad_pcb  hb100_horn_vertical_wall.kicad_prl  hb100_horn_vertical_wall.kicad_pro
kicad/pico_radar_speed_sign/: fp-info-cache  (+5 more)
ltspice/: lm358_amplifier_bode.asc  lm358_amplifier_bode.net  lm358_amplifier_bode.op.raw  lm358_amplifier_bode.raw
references/: CDM324 Doppler Speed Sensor, with FFTs! - Limpkin's blog.html  Radar Module EIRP Radiation Patterns for RCWL-0516, HB100, CDM324.html
word/: datasheet_pico_radar_speed_sign_controller.docx
(+133 files in other folders)
